Closed Bug 1483764 Opened 6 years ago Closed 6 years ago

Content on my netis router cannot be loaded

Categories

(Core :: DOM: Core & HTML, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla63
Tracking Status
firefox63 --- verified

People

(Reporter: ananuti, Assigned: hsivonen)

References

Details

Attachments

(2 files)

Found these errors
12:33:33.772 XML Parsing Error: not well-formed netcore_get.cgi:1:1
Location: http://192.168.1.1/cgi-bin-igd/netcore_get.cgi
Line Number 1, Column 1:
12:33:33.797 NS_ERROR_UNEXPECTED: netcore.js:3523
processResponse http://192.168.1.1/script/netcore.js:3523:8


Regressed from bug 1482640
3:28.13 INFO: Last good revision: e0ddd48b0a8f092c05f3d254e346407929b43f30
3:28.13 INFO: First bad revision: 02b3167c1a8e87b2cb09cf2c6508df76e3e03c76
3:28.13 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=e0ddd48b0a8f092c05f3d254e346407929b43f30&tochange=02b3167c1a8e87b2cb09cf2c6508df76e3e03c76
Attached image screenshot
Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Component: General → DOM
Priority: -- → P1
Try run with ability to distinguish between all bytes but not EOF and all bytes and EOF in lazy decoding:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=2583b0be881026c2fb41945c00143cd4d936e202
* Drop the decoder when it finishes regardless of who called it.
 * Match criteria for having mDecoder process EOF from OnStopRequest to
   the criteria used for eager decoding in StreamReaderFunc.
 * Process EOF when decoding lazily.
 * Get rid of the useless mResponseCharset field.

MozReview-Commit-ID: 7oJwyKQYP8K
Blocks: 1483603
Comment on attachment 9001894 [details]
Bug 1483764 - Fix EOF behavior when decoding responseText lazily.

Olli Pettay [:smaug] has approved the revision.
Attachment #9001894 - Flags: review+
Pushed by hsivonen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/43cdb715d393
Fix EOF behavior when decoding responseText lazily. r=smaug
https://hg.mozilla.org/mozilla-central/rev/43cdb715d393
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
verified++ Nightly 20180817220110.
Status: RESOLVED → VERIFIED
(In reply to Ekanan Ketunuti from comment #9)
> verified++ Nightly 20180817220110.

Thank you for reporting and verifying!

(In reply to smaug on Phabricator)
> Is there any chance for a test here.

It wasn't clear to me how exactly the failure happened except it likely was in this area. That said, a WPT test that has a test-controllable slow XML stream and that reads responseText after headers, in the middle of XML and right before EOF could be useful.
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: