Bug 1483764 - Fix EOF behavior when decoding responseText lazily. r=smaug

* Drop the decoder when it finishes regardless of who called it.
 * Match criteria for having mDecoder process EOF from OnStopRequest to
   the criteria used for eager decoding in StreamReaderFunc.
 * Process EOF when decoding lazily.
 * Get rid of the useless mResponseCharset field.

MozReview-Commit-ID: 7oJwyKQYP8K

Differential Revision: https://phabricator.services.mozilla.com/D3591